ongoing : cv2 taking picture build

--- a/cpp_service_tutorial/CMakeLists.txt
+++ b/cpp_service_tutorial/CMakeLists.txt
@@ -18,9 +18,15 @@ endif()
 find_package(rclcpp REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(turtlesim REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(gazebo_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(custom_interfaces REQUIRED)
+find_package(example_interfaces REQUIRED)
+
+find_package(OpenCV REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(image_transport REQUIRED)
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
@@ -55,6 +61,9 @@ ament_target_dependencies(turtle_jail rclcpp turtlesim custom_interfaces)
 add_executable(spawn_object_wo_gravity src/spawn_object_wo_gravity.cpp)
 ament_target_dependencies(spawn_object_wo_gravity rclcpp std_srvs gazebo_msgs)
 
+add_executable(take_picture_server src/take_picture_server.cpp)
+ament_target_dependencies(take_picture_server rclcpp example_interfaces std_msgs sensor_msgs cv_bridge image_transport OpenCV)
+
 # 빌드 완료된 실행 프로그램들은 아래 폴더에 위치합니다.
 install(
   TARGETS
@@ -63,6 +72,7 @@ install(
     turtle_circle_server
     turtle_circle_server_advanced
     spawn_object_wo_gravity
+    take_picture_server
   DESTINATION 
     lib/${PROJECT_NAME}
 )
