--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 src_gazebo/urdf/src_body.urdf
+*.json
 
 # User-specific stuff
 */.idea/*
