--- a/cpp_multiproc_tutorial/CMakeLists.txt
+++ b/cpp_multiproc_tutorial/CMakeLists.txt
@@ -17,6 +17,9 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -31,5 +34,28 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+add_executable(dead_lock src/dead_lock.cpp)
+ament_target_dependencies(dead_lock rclcpp)
+
+add_executable(multi_executor src/multi_executor.cpp)
+ament_target_dependencies(multi_executor rclcpp)
+
+add_executable(callback_group src/callback_group.cpp)
+ament_target_dependencies(callback_group rclcpp)
+
+add_executable(reentrant_callback_group src/reentrant_callback_group.cpp)
+ament_target_dependencies(reentrant_callback_group rclcpp)
+
+
+install(
+  TARGETS
+    dead_lock
+    multi_executor
+    callback_group
+    reentrant_callback_group
+  DESTINATION 
+    lib/${PROJECT_NAME}
+)
 
 ament_package()
