--- a/ament_general/package.xml
+++ b/ament_general/package.xml
@@ -7,6 +7,11 @@
   <maintainer email="tge1375@naver.com">kimsooyoung</maintainer>
   <license>TODO: License declaration</license>
 
+  <!-- python part -->
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <depend>rclpy</depend>
+  <!-- python part -->
+
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
@@ -15,4 +20,5 @@
   <export>
     <build_type>ament_cmake</build_type>
   </export>
+
 </package>
