--- a/src_gazebo/CMakeLists.txt
+++ b/src_gazebo/CMakeLists.txt
@@ -29,22 +29,22 @@ find_package(ament_cmake REQUIRED)
 ###### 4. colcon build again     #####
 ######################################
 
-find_package(xacro REQUIRED)
-# Xacro files
-file(GLOB xacro_files urdf/*.urdf.xacro)
+# find_package(xacro REQUIRED)
+# # Xacro files
+# file(GLOB xacro_files urdf/*.urdf.xacro)
 
-foreach(it ${xacro_files})
-  # remove .xacro extension
-  string(REGEX MATCH "(.*)[.]xacro$" unused ${it})
-  set(output_filename ${CMAKE_MATCH_1})
+# foreach(it ${xacro_files})
+#   # remove .xacro extension
+#   string(REGEX MATCH "(.*)[.]xacro$" unused ${it})
+#   set(output_filename ${CMAKE_MATCH_1})
 
-  # create a rule to generate ${output_filename} from {it}
-  xacro_add_xacro_file(${it} ${output_filename})
+#   # create a rule to generate ${output_filename} from {it}
+#   xacro_add_xacro_file(${it} ${output_filename})
 
-  list(APPEND urdf_files ${output_filename})
-endforeach(it)
+#   list(APPEND urdf_files ${output_filename})
+# endforeach(it)
 
-add_custom_target(media_files ALL DEPENDS ${urdf_files})
+# add_custom_target(media_files ALL DEPENDS ${urdf_files})
 
 ########
 
